# papro-rusty

./: .gitignore  Cargo.toml  README.md  test.txt
src/: README.md  cli.rs  main.rs
src/db/: database.rs  mod.rs  schemas.rs  types.rs
src/io/: mod.rs  reader.rs  writer.rs
src/kmer/: counter.rs  mod.rs  types.rs
src/profile/: analyzer.rs  mod.rs  types.rs
