[package]
name = "papro-rusty"
version = "0.1.0"
edition = "2021"
authors = ["Michal Babinski <mbabinski17@gmail.com>"]
description = "A k-mer based tool for pathogen profiling from sequencing data"

[[bin]]
name = "papro-rusty"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
rusqlite = { version = "0.32.0", features = ["bundled"] } # Sql lite
bio = "1.3"              # Bioinformatics primitives
needletail = "0.5"       # FASTA/FASTQ parsing
rayon = "1.7"            # Parallel processing
dashmap = "5.5"          # Thread-safe hashmap
bytes = "1.4"            # Efficient byte handling

# Error handling and utilities
thiserror = "1.0"
anyhow = "1.0"

# Performance and data structures
fxhash = "0.2"           # Fast hashing
crossbeam = "0.8"        # Concurrent data structures

[dev-dependencies]
criterion = "0.5"        # For benchmarking
pretty_assertions = "1.4" # Better test assertions
tempfile = "3.8"         # Temporary file handling in tests

[[bench]]
name = "kmer_bench"
harness = false